--- a/client/src/sections/AboutMe/AboutMe.css
+++ b/client/src/sections/AboutMe/AboutMe.css
@@ -1,10 +1,11 @@
 .cont-head {
     width: "90%";
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     padding: 10px 0;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bolder;
     border-bottom: 2px #264653 solid;
     color: #F4A261;
@@ -13,7 +14,15 @@
 .main-cont {
     width: 100%;
     height: 100%;
-    line-height: 43px;
-    font-size: 33px;
-    color: #577684
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-items: center;
+    text-indent: 1em;
+    line-height: 48px;
+    font-size: 24px;
+    padding-top: 12px;
+    overflow: auto;
+    color: #577684;
+    position: relative;
 }
