--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,8 +27,14 @@ time, mark, audio, video {
 
 html {
 	overflow: hidden;
-	background-color: "#264653";
+	background-color: #264653;
 	/* scroll-behavior: smooth; */
+}
+@media screen and (max-width: 600px) {
+	html {
+		overflow-x: hidden;
+		overflow-y: scroll;
+	}
 }
 
 .punc {
@@ -47,6 +53,7 @@ strong {
 }
 ::-webkit-scrollbar {
     width: 6px;
+	height: 6px;
     border-radius: 2px;
 }
 
