--- a/client/src/sections/AboutMe/AboutMe.css
+++ b/client/src/sections/AboutMe/AboutMe.css
@@ -19,9 +19,9 @@
     justify-content: baseline;
     align-items: center;
     text-indent: 1em;
-    line-height: 48px;
+    line-height: 2rem;
     font-size: 24px;
-    padding-top: 12px;
+    padding-top: .5rem;
     overflow: auto;
     color: #577684;
     position: relative;
