--- a/client/src/sections/AboutMe/AboutMe.css
+++ b/client/src/sections/AboutMe/AboutMe.css
@@ -1,5 +1,4 @@
 .cont-head {
-    width: "90%";
     display: flex;
     position: relative;
     justify-content: center;
@@ -9,27 +8,24 @@
     font-weight: bolder;
     border-bottom: 2px #264653 solid;
     color: #F4A261;
+    width: 100%;
 }
 
 .main-cont {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: baseline;
-    align-items: center;
+    flex-grow: 1;
+    /* align-items: center; */
     text-indent: 1em;
     line-height: 2rem;
     font-size: 24px;
-    padding-top: .5rem;
+    padding: .5rem;
     overflow: auto;
     color: #577684;
-    position: relative;
 }
 
 @media screen and (max-width: 600px) {
     .main-cont {
         font-size: 20px;
+        line-height: 1.3rem;
     }
     .cont-head {
         font-size: 30px;
